--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.7.1",
     "sequelize": "^6.35.2"
   },
